deployment/k8s-resources.yaml
# ===========  Kubernetes resources  ==============
---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-store
  namespace: 'book-store'
  labels:
    app: book-store  
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  - name: metrics
    port: 9464
    targetPort: 9464
  type: ClusterIP  
  selector:
    app: book-store
---
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-store
  namespace: 'book-store'
  labels:
    app: book-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-store
  template:
    metadata:
      labels:
        app: book-store
    spec:
      containers:
      - name: book-store
        command:
        - gunicorn
        args:
        # Gunicorn specific args
        - app:app
        - --config
        - gunicorn.conf.py
        - --bind
        - 0.0.0.0:8000
        - --access-logfile
        - '-'
        image: book-store:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: http
        - containerPort: 9464
          name: metrics  
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            memory: 384Mi
            cpu: 100m
          requests:
            cpu: 50m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
      imagePullSecrets: []
---
